name change to reflect correct bio

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
   <body>
-    <!-- Header details - Dele Ayansola -->
+    <!-- Header details - Ayandele Ayansola -->
     <!-- <div class="container"> -->
         <header>
-         <h1>deleayansola</h1>
+         <h1>ayandeleayansola</h1>
          <nav>
             <ul>
                 <li id="item-1">About Me</li>
